--- a/style/main.css
+++ b/style/main.css
@@ -1,14 +1,42 @@
-body {background-color: rgb(66, 204, 158);
-/*the body command stlyes the overall body of my website.
-Will try to add more colors because I heard that is possible.*/
-    font-size: large;
-/*do not have to input px sizes*/
-    font-style: oblique;
-    word-spacing: 40%;
-    color: rgb(107, 16, 211);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-/*more interesting than the standard font*/
-    text-align: center;
-/*nicely alligned my text, made my website look much better without doing too much*/
-    text-decoration: wavy;}
-    /*hard to tell if actually inputed correctly*/
+body 
+{background-image: linear-gradient(90deg, rgb(10, 243, 231), rgb(34, 236, 78));
+    /*the body command stlyes the overall body of my website.
+    Will try to add more colors because I heard that is possible.*/
+        font-size: large;
+    /*do not have to input px sizes*/
+        font-style: oblique;
+        word-spacing: 40%;
+        color: rgb(107, 16, 211);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /*more interesting than the standard font*/
+        text-align: center;}
+    /*nicely alligned my text, made my website look much better without doing too much*/
+.about{
+        margin: 2%;
+        margin-left: 300px;
+        margin-right: 300px;}
+.monet{
+        border: 10px;
+        border-style: dashed inset;
+        border-color:indianred;
+        border-radius: 3%;
+        margin: 10px;
+        margin-bottom: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+        padding: 25px;
+        font-family:serif;
+        font-size: 30px;}
+.references{
+        border: 10px;
+        border-style: dashed inset;
+        border-color:indianred;
+        border-radius: 3%;
+        margin: 10px;
+        margin-bottom: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+        padding: 5px;
+        font-family:serif;
+        font-size: 30px;
+    }
